# gotranx

./: .cspell_dict.txt  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _config.yml  _toc.yml  cspell.config.yaml  index.html  mkdocs.yml  model_Torord_withmito_mtk.jl  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: build_docs.yml  build_joss_paper.yml  codspeed.yml  main.yml  pages.yml  pre-commit.yml  pypi.yml
contributing/: index.html
demos/: index.html
docs/: about.md  api.rst  cli.md  config.md  contributing.md  demos.md  gen_ref_nav.py  grammar.md  history.md  index.md  installation.md  new_language.md  new_scheme.md  noble_1962.cellml  ode2md.md  roadmap.md  vectorized_computations.md
docs/demos/: cli.md
examples/: lorentz.py  lorentz_julia.py
examples/compile-c-extension/: CMakeLists.txt  ORdmm_Land.ode  cmodel.py  main.py  template.c  utils.py
examples/new-language/: codegen.py  lorentz.py  main.py  new_language.py  template.py
examples/run-python/: ORdmm_Land.ode  main.py  main_numba.py
examples/split-ode/: ORdmm_Land.ode  main.py
installation/: index.html
joss-paper/: paper.bib  paper.md
search/: search_index.json
src/gotran_parser/: __init__.py  atoms.py  codegen.py  exceptions.py  expressions.py  load.py  ode.lark  ode.py  ode_component.py  save.py  sympy_ode.py  transformer.py
src/gotran_parser/templates/: c.py
src/gotranx/: __init__.py  _enum.py  atoms.py  codecomponent.py  codegen.py  exceptions.py  expressions.py  load.py  myokit.py  ode.lark  ode.py  ode_component.py  parser.py  save.py  schemes.py  sympy_ode.py  sympytools.py  transformer.py
src/gotranx/cellml/: __init__.py  cellml.py  mathml.py
src/gotranx/cli/: __init__.py  cellml2ode.py  gotran2c.py  gotran2julia.py  gotran2md.py  gotran2mtk.py  gotran2py.py  gotran2ufl.py  inspect.py  ode2cellml.py  runner.py  utils.py
src/gotranx/codegen/: __init__.py  base.py  c.py  jax.py  julia.py  markdown.py  mtk.py  ode.py  python.py  ufl.py
src/gotranx/templates/: __init__.py  c.py  jax.py  julia.py  markdown.py  mtk.py  py.py  python.py  ufl.py
src/lib_template/: __init__.py  cli.py
tests/: conftest.py  generate_results_files.py  test_atoms.py  test_benchmarks.py  test_c_codegen.py  test_cellml.py  test_cli.py  test_codegen.py  test_comments.py  test_conditionals.py  test_demos.py  test_expressions.py  test_integration.py  test_julia_codegen.py  test_load.py  test_markdown_codegen.py  test_mtk_codegen.py  test_myokit.py  test_ode.py  test_ode_component.py  test_operations.py  test_python_codegen.py  test_save.py  test_schemes.py  test_subodes.py  test_sympy_ode.py  test_sympytools.py  test_transformer.py  test_transformer_assignments.py  test_transformer_component.py  test_transformer_parameters.py  test_transformer_states.py  test_ufl_codegen.py
tests/cellml_files/: ToRORd_dynCl_mid.cellml
tests/mmt_files/: example.mmt
tests/odefiles/: ORdmm_Land.ode  ToRORd_dyn_chloride.ode  beeler_reuter_1977.ode  fitzhughnagumo.ode  lorentz.ode  model_Torord_withmito.ode  tentusscher_panfilov_2006_M_cell.ode
