[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gotranx"
version = "1.3.5"
description = "A declarative language describing ordinary differential equations"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["parser", "lark", "gotran", "ode"]
urls = {Homepage = "https://github.com/finsberg/gotranx"}
requires-python = ">=3.9"
dependencies = [
    "attrs",
    "lark",
    "pint",
    "rich-click",
    "structlog",
    "sympy",
    "typer",
    "myokit",
    "click<8.2",
    "toml; python_version < '3.11'",
    'graphlib-backport;python_version < "3.9"',
    'typing_extensions;python_version < "3.9"',
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
formatters = [
    "black",
    "clang-format-docs",
]
dev = [
    "bump-my-version",
    "ipython",
    "pdbpp",
    "pre-commit",
    "twine",
    "wheel",
]
docs = [
    "jupyter-book",
    "jupytext",
    "scipy",
    "sphinxcontrib-mermaid",
    "jax",
    "numba",
    "gotranx[formatters]",
]
test = [
    "pytest",
    "pytest-cov",
    "jax",
    "cmake",
    "gotranx[formatters]",
]
benchmark = [
    "pytest-benchmark>=4.0.0",
    # TODO: remove bound once pytest-codspeed supports 3.13, blocked by `python-cffi`
    "pytest-codspeed~=2.2.0; python_version < '3.13'",
    "gotranx[test]",
]
all = ["gotranx[formatters,dev,docs,test]"]

[project.scripts]
gotranx = "gotranx.cli:app"


[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.lark"]

[tool.aliases]
test = "pytest"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: mark a test as a benchmark.",
    "example: mark a test as an example."
]


[tool.mypy]
files = ["src/gotranx", "tests"]
ignore_missing_imports = true
exclude = [
    "docs",
    "examples",
]

[tool.coverage.run]
omit = ["src/gotranx/__main__.py", "src/gotranx/templates/__init__.py"]


[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    "examples",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "1.3.5"


[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
