[metadata]
name = lib-template
version = 0.0.1
description = Sync local directories with dropbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/lib-template
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = dropbox, cloud storage, files, sync

[options]
packages = find:
install_requires =
    typer
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sync = lib_template.cli:app

[options.extras_require]
dev =
    bump2version
    ipython
    pdbpp
    pre-commit
    twine
    wheel
docs =
    Sphinx
    myst-parser
    sphinx-book-theme
test =
    pre-commit
    pytest
    pytest-cov

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/lib_template --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests

[isort]
profile = black

[mypy]
files = src/lib_template,tests
ignore_missing_imports = true
exclude = docs
