[metadata]
name = gotran_parser
version = 0.0.1
description = Sync local directories with dropbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/gotran-parser
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = parser, lark, gotran, ode

[options]
packages = find:
install_requires =
    attrs
    lark
    sympy
    typer
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gotran-parser = gotran_parser.cli:app

[options.extras_require]
dev =
    bump2version
    ipython
    pdbpp
    pre-commit
    twine
    wheel
docs =
    mkdocs
    mkdocs-material
test =
    pre-commit
    pytest
    pytest-cov

[options.package_data]
* = *.lark

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/gotran_parser --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests

[isort]
profile = black

[mypy]
files = src/gotran_parser,tests
ignore_missing_imports = true
exclude = docs

[coverage:run]
omit =
    src/gotran_parser/__main__.py
